crates/proef-cli/tests/snapshots/corpus__artifact__502-api-attachment--an-attachment-uploaded-via-the-api-appears-on-the-board.vars.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef variables for 502-api-attachment--an-attachment-uploaded-via-the-api-appears-on-the-board.hurl
# secret `apiToken` — supply at replay: --secret apiToken=<value>
