crates/proef-cli/tests/snapshots/corpus__artifact__502-api-photo--a-photo-uploaded-via-the-api-appears-in-the-photo-feed.vars.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef variables for 502-api-photo--a-photo-uploaded-via-the-api-appears-in-the-photo-feed.hurl
# secret `apiToken` — supply at replay: --secret apiToken=<value>
