crates/proef-cli/tests/snapshots/corpus__artifact__503-api-call--a-call-invite-appears-in-the-call-feed-and-can-be-denied.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — A call invite appears in the call feed and can be denied
# source: tests/features/503_api_call.feature:10
# replay: hurl --test 503-api-call--a-call-invite-appears-in-the-call-feed-and-can-be-denied.hurl --variables-file 503-api-call--a-call-invite-appears-in-the-call-feed-and-can-be-denied.vars --secret apiToken=<value>

# tests/features/503_api_call.feature:11 — the client environment is provisioned (fixture warm-up probe)
# optional
GET http://127.0.0.1:8787/health
HTTP 200

# tests/features/503_api_call.feature:11 — the client environment is provisioned (provision the environment)
POST http://127.0.0.1:8787/api/v1/env/provision
Authorization: Bearer {{apiToken}}
{"run": "proef-snapshot"}
HTTP 201
[Captures]
envId: jsonpath "$.id"

# tests/features/503_api_call.feature:12 — the client feed is activated and ready (request activation)
POST http://127.0.0.1:8787/api/v1/feed/activate
X-Proef-Env: {{envId}}
Authorization: Bearer {{apiToken}}
{"env": "{{envId}}"}
HTTP 200
[Captures]
feedId: jsonpath "$.feedId"

# tests/features/503_api_call.feature:12 — the client feed is activated and ready (feed reports ready)
GET http://127.0.0.1:8787/api/v1/feed/{{feedId}}/state
X-Proef-Env: {{envId}}
[Options]
retry: 10
retry-interval: 300ms
HTTP 200
[Asserts]
jsonpath "$.status" == "ready"

# tests/features/503_api_call.feature:13 — the client Bakker-${run:id} is resolved (search clients for Bakker-proef-snapshot)
GET http://127.0.0.1:8787/api/v1/admin/search/clients
Authorization: Bearer {{apiToken}}
[Query]
q: Bakker-proef-snapshot
HTTP 200
[Captures]
clientId: jsonpath "$[0].id"

# tests/features/503_api_call.feature:13 — the client Bakker-${run:id} is resolved (confirm the client exists)
GET http://127.0.0.1:8787/api/v1/clients/{{clientId}}
Authorization: Bearer {{apiToken}}
HTTP 200
[Asserts]
jsonpath "$.id" == "{{clientId}}"

# tests/features/503_api_call.feature:14 — the relative places a video call (place the call)
POST http://127.0.0.1:8787/api/v1/clients/{{clientId}}/calls
X-Proef-Env: {{envId}}
Authorization: Bearer {{apiToken}}
{"kind": "video", "run": "proef-snapshot"}
HTTP 201
[Captures]
callId: jsonpath "$.id"

# tests/features/503_api_call.feature:15 — the call feed shows the incoming call (incoming call visible)
GET http://127.0.0.1:8787/api/v1/feed/{{feedId}}/call
X-Proef-Env: {{envId}}
[Options]
retry: 10
retry-interval: 300ms
HTTP 200
[Asserts]
jsonpath "$.state" == "incoming"
jsonpath "$.callId" == "{{callId}}"

# tests/features/503_api_call.feature:16 — the call can be denied via the API (deny the call)
POST http://127.0.0.1:8787/api/v1/feed/{{feedId}}/call/{{callId}}/deny
X-Proef-Env: {{envId}}
HTTP 200

# tests/features/503_api_call.feature:16 — the call can be denied via the API (call state back to idle)
GET http://127.0.0.1:8787/api/v1/feed/{{feedId}}/call
X-Proef-Env: {{envId}}
HTTP 200
[Asserts]
jsonpath "$.state" == "idle"
