crates/proef-cli/tests/snapshots/corpus__artifact__503-api-call--a-call-invite-appears-in-the-call-feed-and-can-be-denied.vars.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef variables for 503-api-call--a-call-invite-appears-in-the-call-feed-and-can-be-denied.hurl
# secret `apiToken` — supply at replay: --secret apiToken=<value>
