crates/proef-cli/tests/snapshots/corpus__artifact__503-api-session--a-live-session-appears-as-pending-and-can-be-cancelled.vars.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef variables for 503-api-session--a-live-session-appears-as-pending-and-can-be-cancelled.hurl
# secret `apiToken` — supply at replay: --secret apiToken=<value>
